EE13 btnimg class added

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1001,7 +1001,7 @@
                 <div class="slider">
                   <img type="range" class="slider_V">
                   <div class="v slider-box">
-                    <img src="./src/images/sliders/slider_V_arrow.png" class="slider-V-arrow slider-v-r1">
+                    <img src="./src/images/sliders/slider_V_arrow.png" class="slider-V-arrow slider-v-r1 btn-img">
                     <div class="value-box">
                       <input type="text" value="0" readonly>
                       <span>V</span>
@@ -1186,62 +1186,62 @@
     <!--! EE13 images added -->
     
     <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/btn_check.png"
 />
 
  <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/btn_delete.png"
 />
 
  <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/btn_next_mode.png"
 />
 
  <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/btn_record.png"
 />
 
  <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/btn_reset.png"
 />
 
  <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/btn_reset_3.png"
 />
 
  <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/btn_restart_operation.png"
 />
 
  <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/option_1_tab_1.png"
 />
 
  <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/option_1_tab_2.png"
 />
 
  <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/option_1_tab_3.png"
 />
 
  <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/option_1_tab_4.png"
 />
 
  <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/option_1_tab_5.png"
 />
 
@@ -1266,12 +1266,12 @@
 />
 
  <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/part_3_option_1_load_1.png"
 />
 
  <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/part_3_option_1_load_2.png"
 />
  <img
@@ -1303,7 +1303,7 @@
     src="./src/images/EE13/helper_1.png"
 />
  <img
-    class="main-window-imgs pointer"
+    class="main-window-imgs btn-img"
     src="./src/images/EE13/btn_proceed.png"
 />
 <!-- ! EE13 images end here -->
