EE 16 btn-img class added

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1207,77 +1207,77 @@
     <!--! EE16 images added -->
     
           <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_delete.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_priciple_of_operation.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_proceed.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_record.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_reset.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_reset_2.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_restart_waveform.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_turn_on_t1.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_turn_on_t2.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_turn_on_t3.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_turn_on_t4.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_turn_on_t5.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_turn_on_t6.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_verify.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/btn_waveforms.png"
       />
 
@@ -1292,12 +1292,12 @@
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/load_1.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/load_2.png"
       />
 
@@ -1387,57 +1387,57 @@
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/tab_0_deg.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/tab_1.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/tab_120_deg.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/tab_150_deg.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/tab_2.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/tab_3.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/tab_30_deg.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/tab_4.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/tab_5.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/tab_60_deg.png"
       />
 
       <img
-          class="main-window-imgs pointer"
+          class="main-window-imgs btn-img"
           src="./src/images/EE16/tab_90_deg.png"
       />
 
