EE16 Experimental results and editing done

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1214,6 +1214,7 @@
 
             <img class="main-window-imgs" src="./src/images/EE16/new/val_v.png" />
 
+            <img class="main-window-imgs" src="./src/images/popup_imgs/formulas_procedure_slider_1.png" />
 
             <!-- ! EE16 images end here -->
             <!-- * Videos -->
